--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,9 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --color-navbar-back: #1f1e1e;
+  --color-navactive-btn: #434242;
+  --color-nav-text: #cfcfcf;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,8 +22,16 @@
   }
 }
 
+.help {
+  color: #cfcfcf;
+}
+
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background: #f7f7f7;
+  color: black;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.inter-font {
+  font-family: sans-serif;
 }
